updates for lab8
